~ Update site with more info

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,10 +25,10 @@
 					   and site.data.profile.current-company-name != "" 
 					   and site.data.profile.current-company-website != "" %}
 					<br>
-					Currently a {{site.data.profile.current-position-name}} @
+					<!-- Currently a {{site.data.profile.current-position-name}} @
 					<a href="{{site.data.profile.current-company-website}}" target="_blank" rel="nofollow">
 						{{site.data.profile.current-company-name}}
-					</a>  in {{ site.data.profile.location }}
+					</a>  in {{ site.data.profile.current-company-location }} -->
 					{% endif %}
 				</p>
 				<ul class="actions">
